Issue #3211616 by mherchel, Gauravmahlawat, lauriii, bnjmnm, ckrina, xjm, rikki_iki, jwitkowski79: Olivero: a11y color contrast test fail for primary button on hover

--- a/core/themes/olivero/css/components/button.css
+++ b/core/themes/olivero/css/components/button.css
@@ -139,7 +139,8 @@
 .button--primary:hover,
   .button--primary:focus {
     color: #fff;
-    background-color: #2494db;
+    border-color: #0f6292;
+    background-color: #0f6292;
   }
 
 .button--primary:active {
